fonctionnement archaique du placement des bateaux + debut partie

--- a/jeu/jeu.html
+++ b/jeu/jeu.html
@@ -16,7 +16,15 @@
   </div>
   <div class="wrapper">
     <div class="boards">
-      <div class="dock">Zone de<br>déploiement</div>
+      <div class="dock">
+        <div>Zone de<br>déploiement</div>
+        <img src="" class="deplacable bateau" alt="porte-avions" id="porte-avions">
+        <img src="" class="deplacable bateau" alt="cuirasse" id="cuirasse">
+        <img src="" class="deplacable bateau" alt="destroyer" id="destroyer">
+        <img src="" class="deplacable bateau" alt="sous-marin" id="sous-marin">
+        <img src="" class="deplacable bateau" alt="patrouilleur" id="patrouilleur">
+        <div>(r to rotate)</div>
+      </div>
       <div class="zone">
         <div class="side-title">Votre plateau</div>
         <div id="board-player" class="board"></div>
