changer l'id partie par défaut pour dynamique

--- a/jeu/jeu1.html
+++ b/jeu/jeu1.html
@@ -18,11 +18,11 @@
 <div class="game-board">
     <div class="zone deploiement">
         <div class="important">Zone de<br>déploiement</div>
-        <img src="" class="deplacable bateau" alt="porte-avions" id="porte-avions">
-        <img src="" class="deplacable bateau" alt="cuirasse" id="cuirasse">
-        <img src="" class="deplacable bateau" alt="destroyer" id="destroyer">
-        <img src="" class="deplacable bateau" alt="sous-marin" id="sous-marin">
-        <img src="" class="deplacable bateau" alt="patrouilleur" id="patrouilleur">
+        <span class="deplacable bateau" id="porte-avions">Porte-avions</span>
+        <span class="deplacable bateau" id="cuirasse">Cuirassé</span>
+        <span class="deplacable bateau" id="destroyer">Destroyer</span>
+        <span class="deplacable bateau" id="sous-marin">Sous-marin</span>
+        <span class="deplacable bateau" id="patrouilleur">Patrouilleur</span>
         <div class="important">(r pour <br>changer la <br>rotation)</div>
     </div>
     <div class="plateau-jeu-droite">
